[tool.poetry]
name = "prefect-shared"
version = "2.3.1"
description = ""
authors = ["darrida <darrida.py@gmail.com>"]
repository = ""

[tool.poetry.dependencies]
python = "^3.10"
prefect = "^2.0.0"
tqdm = "^4.0.0"
pandas = "^1.0.0"
lxml = "^4.0.0"
fs = "^2.0.0"
boto3 = "^1.0.0"

[tool.poetry.dev-dependencies]
click = "^8.1.3"

[tool.docker]
registry = ""

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api" 